--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g default-command /usr/bin/zsh
+set-option -g status-style bg=default
+set -g status-fg white
+set-option -g status-position top
 
 set -s default-terminal 'tmux-256color'
 
