--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -15,3 +15,6 @@ codegen-backend = "cranelift"
 [build]
 wrapper = "~/.cargo/bin/sccache"
 rustflags = ["-Z", "threads=8"]
+
+[net]
+git-fetch-with-cli = true
