--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,14 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g default-command /usr/bin/zsh
 set-option -g status-style bg=default
+set-window-option -g mode-keys vi
 set -g status-fg white
 set-option -g status-position top
 
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
+bind 'v' copy-mode
 
 set -s default-terminal 'tmux-256color'
 
