minor changes to vim config and bash

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [init]
 	defaultBranch = master
 [user]
-	email = jakub.doka2@gmail.com
-	name = jakubDoka
+	email = jdoka@crownsterling.io
+	name = mlokr
