--- a/.config/sway/config
+++ b/.config/sway/config
@@ -35,18 +35,6 @@ for_window [title="Slack"] move to workspace 3
 for_window [title="Steam"] move to workspace 4
 
 #
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-
-### Idle configuration
-exec swayidle -w \
-    timeout 300 '$lock' \
-    timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-    before-sleep '$lock'
-#
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
@@ -179,6 +167,7 @@ exec swayidle -w \
 # Screen Capture:
 #
     bindsym Print exec grim -g "$(slurp)" - | wl-copy
+    bindsym $mod+Print exec grim -g "$(slurp -p)" -t ppm - | convert - -format '%[pixel:p{0,0}]' txt:- | tail -n 1 | tr -s ' ' | cut -d' ' -f3 | xargs wl-copy
 #
 # Resizing containers:
 #
