--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,8 @@
 [init]
 	defaultBranch = master
 [user]
-	email = jdoka@crownsterling.io
-	name = mlokr
+	email = jakub.doka2@gmail.com
+	name = Jakub Doka
 	siningkey = 7EA4A8DC8153741B
 [color]
 	ui = auto
