--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [target.x86_64-unknown-linux-gnu]
-rustflags = ["-Ctarget-feature=+avx2"]
+linker = "clang"
+rustflags = ["-Ctarget-feature=+avx2", "-C", "link-arg=-fuse-ld=/usr/bin/mold"]
 
 #[unstable]
 #codegen-backend = true
