removing impractical shortcuts in fawor of commands

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,7 @@
 	email = jakub.doka2@gmail.com
 	name = Jakub Doka
 	siningkey = 7EA4A8DC8153741B
+	signingKey = C6E9A89936B8C143
 [color]
 	ui = auto
 [core]
