--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -18,3 +18,40 @@ rustflags = ["-Z", "threads=8"]
 
 [net]
 git-fetch-with-cli = true
+
+[target.aarch64-linux-android]
+linker = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android24-clang"
+ar = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
+
+[target.i686-linux-android]
+linker = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android24-clang"
+ar = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
+
+[target.armv7-linux-androideabi]
+linker = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi24-clang"
+ar = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
+
+[target.x86_64-linux-android]
+linker = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android24-clang"
+ar = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
+
+[env]
+CC_aarch64_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android24-clang"
+CXX_aarch64_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android24-clang++"
+AR_aarch64_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
+RANLIB_aarch64_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ranlib"
+
+CC_armv7_linux_androideabi = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi24-clang"
+CXX_armv7_linux_androideabi = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi24-clang++"
+AR_armv7_linux_androideabi = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
+RANLIB_armv7_linux_androideabi = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ranlib"
+
+CC_i686_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android24-clang"
+CXX_i686_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android24-clang++"
+AR_i686_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
+RANLIB_i686_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ranlib"
+
+CC_x86_64_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android24-clang"
+CXX_x86_64_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android24-clang++"
+AR_x86_64_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
+RANLIB_x86_64_linux_android = "/home/mlokis/Android/Sdk/ndk/29.0.14033849/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ranlib"
