adding repetition toggle

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -35,6 +35,10 @@ input "1386:912:Wacom_Cintiq_16_Finger" {
     map_to_output HDMI-A-1
 }
 
+input * {
+    repeat_rate 0
+}
+
 exec --no-startup-id swaymsg 'exec ~/tools/st/st'
 exec --no-startup-id swaymsg 'exec brave'
 
@@ -159,6 +163,10 @@ for_window [title="Steam"] move to workspace 3
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
+#
+# Key repetition
+#
+    bindsym $mod+t exec ./toggle-key-repeat.sh
 #
 # Hardware switches:
 #
